# voice-ai

./: .gitignore  CLAUDE.md  LICENSE  README.md
cohere-transcribe/: .dockerignore  README.md  deploy.sh  karpenter-gpu-nodepool.yaml  ray-service-transcribe.yaml  requirements.txt  serve_app.py
infrastructure/: README.md  setup-cluster.sh  teardown-cluster.sh
infrastructure/eks/: cluster-config.yaml
infrastructure/karpenter/: ec2-nodeclass.yaml  install-karpenter.sh
infrastructure/kuberay/: install-kuberay.sh
infrastructure/monitoring/: container-insights.sh  prometheus-servicemonitor.yaml
infrastructure/nvidia/: install-nvidia-plugin.sh
kokoro-tts/: .dockerignore  Dockerfile  README.md  deploy.sh  karpenter-gpu-nodepool.yaml  ray-service-kokoro.yaml  requirements.txt  serve_app.py
omni-voice/: Dockerfile  README.md  deploy.sh  karpenter-gpu-nodepool.yaml  ray-service-omnivoice.yaml  requirements.txt  serve_app.py
qwen3-tts/: README.md  deploy.sh  karpenter-gpu-nodepool.yaml  ray-service-tts.yaml  requirements.txt  serve_app.py
voice-pipeline/: .env.example  README.md  bot.py  pyproject.toml
voice-pipeline/services/: cohere_stt.py  kokoro_tts.py  omnivoice_tts.py  qwen3_tts.py  whisper_stt.py
whisper-large-v3-turbo/: README.md  deploy.sh  karpenter-gpu-nodepool.yaml  ray-service-whisper.yaml  requirements.txt  serve_app.py
