[project]
name = "voice-pipeline"
version = "0.1.0"
description = "Voice AI pipeline: self-hosted Cohere STT + Qwen3 TTS + Bedrock LLM via Pipecat"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[aws,silero,webrtc,runner]>=1.0.0",
    "pipecat-ai-small-webrtc-prebuilt>=2.0.0",
    "httpx~=0.27.0",
    "python-dotenv",
    "loguru",
]
